[gd_scene load_steps=22 format=2]

[ext_resource path="res://fonts/joystix monospace.otf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://art/hud/start-screen-2-3.png" type="Texture" id=3]
[ext_resource path="res://art/hud/check.png" type="Texture" id=4]
[ext_resource path="res://art/hud/checked.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=16]
size = 28
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 250
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 55
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=2]
action = "hud_shortcut"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 60
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=6]
action = "hud_shortcut"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 38
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 39
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 38
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 38
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 38
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 38
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 33
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 30
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartScreen" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="InfoScreen" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.203922, 0.266667, 0.541176, 1 )

[node name="soundCheck" type="CheckBox" parent="InfoScreen"]
margin_left = 504.0
margin_top = 712.0
margin_right = 778.0
margin_bottom = 786.0
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 16 )
custom_icons/checked = ExtResource( 5 )
custom_icons/unchecked = ExtResource( 4 )
action_mode = 0
text = " sound off"

[node name="EndScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.196078, 0.352941, 0.156863, 1 )

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -168.0
margin_right = 640.0
margin_bottom = 435.0
custom_colors/font_color = Color( 1, 0.819608, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "0
"
align = 1

[node name="MessageLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.0
margin_top = 192.0
margin_right = 640.0
margin_bottom = 351.0
custom_colors/font_color = Color( 0.0509804, 1, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
autowrap = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -528.0
margin_top = -240.0
margin_right = 574.0
margin_bottom = -154.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 3 )
text = "PRESS ENTER TO START"
flat = true
icon_align = 1
expand_icon = true

[node name="StartGameButton" type="Button" parent="."]
margin_left = 216.0
margin_top = 800.0
margin_right = 1373.0
margin_bottom = 956.0
rect_scale = Vector2( 0.75, 0.75 )
custom_colors/font_color = Color( 0, 1, 0.996078, 1 )
custom_fonts/font = SubResource( 15 )
shortcut = SubResource( 7 )
text = "PRESS ENTER TO START!"
flat = true

[node name="PointsLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -584.0
margin_top = 33.0
margin_right = -548.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 2

[node name="Special2Label" type="Label" parent="."]
margin_left = 1184.0
margin_top = 32.0
margin_right = 1220.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 8 )
text = "0"

[node name="TimeOutLabel" type="Label" parent="."]
margin_left = 216.0
margin_top = 32.0
margin_right = 262.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="DashLabel" type="Label" parent="."]
margin_left = 488.0
margin_top = 32.0
margin_right = 674.0
margin_bottom = 85.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "CHIPS:"

[node name="Special2Label2" type="Label" parent="."]
margin_left = 976.0
margin_top = 32.0
margin_right = 1192.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 11 )
text = "Cakes:"

[node name="CountDownLabel" type="Label" parent="."]
margin_left = 40.0
margin_top = 32.0
margin_right = 195.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 12 )
text = "TIME:"

[node name="InfoLabel1" type="Label" parent="."]
margin_left = 112.0
margin_top = 88.0
margin_right = 1156.0
margin_bottom = 525.0
custom_colors/font_color = Color( 0, 1, 0.0627451, 1 )
custom_constants/line_spacing = 19
custom_fonts/font = SubResource( 13 )
text = "YOU DON'T WANT TO BE AT THIS PARTY.
DODGE THE PARTY PEOPLE!!!
DRINK BEER TO SURVIVE. 
EAT CHIPS TO DASH.
EAT CAKE TO BECOME INVINCIBLE.
"
align = 1

[node name="InfoLabel2" type="Label" parent="."]
margin_left = 384.0
margin_top = 424.0
margin_right = 892.0
margin_bottom = 723.0
custom_colors/font_color = Color( 1, 0.913725, 0, 1 )
custom_constants/line_spacing = 7
custom_fonts/font = SubResource( 14 )
text = "MOVEMENT : wasd
lean left : j
lean right : k
eat chips : space
eat cake : l
quit game : esc"
align = 1

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
